@@ -9,10 +9,10 @@ import com.datastax.spark.connector.rdd.partitioner.{CassandraRDDPartitioner, Ca
 import com.datastax.spark.connector.rdd.partitioner.dht.TokenFactory
 import com.datastax.spark.connector.rdd.reader._
 import com.datastax.spark.connector.types.{ColumnType, TypeConverter}
-import com.datastax.spark.connector.util.CountingIterator
+import com.datastax.spark.connector.util.{Logging, CountingIterator}
 
 import org.apache.spark.rdd.RDD
-import org.apache.spark.{Logging, Partition, SparkContext, TaskContext}
+import org.apache.spark.{Partition, SparkContext, TaskContext}
 
 import scala.collection.JavaConversions._
 import scala.language.existentials
@@ -53,6 +53,22 @@ class CassandraRDD[R] private[connector] (
   implicit
     ct : ClassTag[R], @transient rtf: RowReaderFactory[R])
   extends RDD[R](sc, Seq.empty) with Logging {
+
+  /* Logging classes inheritance conflict fix
+   */
+  override def log = super[Logging].log
+  override def logInfo(msg: => String) = super[Logging].logInfo(msg)
+  override def logDebug(msg: => String) = super[Logging].logDebug(msg)
+  override def logTrace(msg: => String) = super[Logging].logTrace(msg)
+  override def logWarning(msg: => String) = super[Logging].logWarning(msg)
+  override def logError(msg: => String) = super[Logging].logError(msg)
+  override def logInfo(msg: => String, throwable: Throwable) = super[Logging].logInfo(msg, throwable)
+  override def logDebug(msg: => String, throwable: Throwable) = super[Logging].logDebug(msg, throwable)
+  override def logTrace(msg: => String, throwable: Throwable) = super[Logging].logTrace(msg, throwable)
+  override def logWarning(msg: => String, throwable: Throwable) = super[Logging].logWarning(msg, throwable)
+  override def logError(msg: => String, throwable: Throwable) = super[Logging].logError(msg, throwable)
+  override def isTraceEnabled = super[Logging].isTraceEnabled
+
 
   /** How many rows are fetched at once from server */
   val fetchSize = sc.getConf.getInt("spark.cassandra.input.page.row.size", 1000)
