@@ -2,10 +2,10 @@ package com.datastax.spark.connector.rdd.reader
 
 import java.lang.reflect.Constructor
 
+import com.datastax.spark.connector.util.Logging
 import com.google.common.primitives.Primitives
 import com.thoughtworks.paranamer.AdaptiveParanamer
 import org.apache.commons.lang3.reflect.ConstructorUtils
-import org.apache.spark.Logging
 
 import scala.reflect.runtime.universe._
 import scala.util.{Failure, Success, Try}
