@@ -1,9 +1,6 @@
 package com.datastax.spark.connector.util
 
 import java.util.UUID
-
-import org.apache.spark.Logging
-
 import scala.util.parsing.combinator.RegexParsers
 
 object CqlWhereParser extends RegexParsers with Logging {
